--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,4 @@ edition = "2021"
 
 
 [dependencies]
-vizia = {git = "https://github.com/vizia/vizia", branch = "main"}
+vizia = {git = "https://github.com/vizia/vizia"}
