--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 vizia = {git = "https://github.com/vizia/vizia"}
 ron = "0.7"
 serde = { version = "1", features = ["derive"] }
+rand = "0.8.5"
