--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 
 [dependencies]
-vizia = {git = "https://github.com/vizia/vizia", branch = "textbox-dev"}
+vizia = {git = "https://github.com/vizia/vizia", branch = "proxy-mouse"}
+# vizia = {path = "../vizia"}
 ron = "0.7"
 serde = { version = "1", features = ["derive"] }
