--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ vizia = {git = "https://github.com/vizia/vizia", branch = "proxy-mouse"}
 # vizia = {path = "../vizia"}
 ron = "0.7"
 serde = { version = "1", features = ["derive"] }
+tokio = { version = "1.18.2", features = ["full"] }
+chrono = "0.4.19"
